--- a/templates/empty.html
+++ b/templates/empty.html
@@ -9,7 +9,7 @@
 
 <body>
     <?php include_once "templates/header.html" ?>
-    <h2>Fill the form first</h2>
+    <h2>Fill Form First</h2>
 
 
     <?php include_once "templates/footer.html" ?>
