--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,4 +7,10 @@
 </style>
 <footer>
     Footer
+    <!-- <h4>$_GET</h4>
+    <?= var_dump($_GET); ?>
+    <h4>$_POST</h4>
+    <?= var_dump($_POST); ?>
+    <h4>$_SESSION</h4>
+    <?= var_dump($_SESSION); ?> -->
 </footer>
