--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
+    <title>Home</title>
 </head>
 
 <body>
     <?php include_once "templates/header.html" ?>
     <h2>Welcome</h2>
+    
 
 
     <?php include_once "templates/footer.html" ?>
