--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,7 +6,7 @@
     }
 </style>
 <nav>
-    <a href="index.php">Main</a> |
+    <a href="index.php">Home</a> |
     <a href="?page=adult_form">Adult Form</a> |
     <a href="?page=adult_list">Adults List</a> |
     <a href="?page=teen_form">Teenager Form</a> |
